Correct complete selection of locations and align locations scheme below hall identifier. Add check of items in location.

--- a/apps/sga/src/app/locations/list/list.component.scss
+++ b/apps/sga/src/app/locations/list/list.component.scss
@@ -49,6 +49,14 @@ table {
   border-bottom-color: transparent;
 }
 
+.row-icon-location {
+width: 80px;
+}
+
+td.row-element-detail {
+  padding-left: 80px;
+}
+
 .element-detail {
   width: auto;
   tr {
